# Spotify_Prediction_Model

./: .gitignore  BaseModel.ipynb  Download_from_kagglehub.py  EDA.ipynb  EDA_Spotify_Tracks_Kaggle.ipynb  Feature_Engineering.ipynb  FinalBaseModel.ipynb  FinalVisualizations.ipynb  Hyperparameter_Tuning.ipynb  README.md  SimpleBaselineModel.ipynb  clean_data.py  clean_data_func.py  feature_engineer_func.py  fetch_spotify_api  fetch_spotify_credentials.py  main.py  pyproject.toml
classification_reports/: log_model_classification_report.csv  rfc_best_model_classification_report.csv  rfc_model_classification_report.csv  simple_model_classification_report.csv
notebooks (jupyter)/: Feature_Engineering.ipynb  FinalBaseModel.ipynb
src/: __init__.py  create_plots.py  data_prep_for_model.py  final_model.py
src/data_retrieval/: download_from_kagglehub.py
src/features/: clean_data_func.py  data_prep_for_model.py  feature_engineer_func.py
src/results/: final_model_classification_report.csv
src/visualization/: create_plots.py
tests/: test_final_model.py
