[project]
name = "spotify-recommend-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "optuna>=4.3.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pytest>=8.3.5",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "spotipy>=2.25.1",
    "statsmodels>=0.14.4",
]
